--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -40,8 +40,8 @@ h1 {
     margin-left: 10%;
     width: 35%;
     text-align: center;
-    font-size: 200%;
-    font-family:'Verdana';
+    font-size: 3vw;
+    font-family:'Nunito Sans';
     color: #ffffff;
     background: #5c87c0;
     height: 100%;
@@ -55,8 +55,8 @@ h2 {
     justify-content: center;
     margin-top: 5px;
     color: slategray;
-    font-family: 'Geneva';
-    font-size: 110%;
+    font-family: 'Nunito';
+    font-size: 1.5vw;
     border-right: 1px solid lightgray;
     padding: 1%;
     height: 30%;
@@ -92,9 +92,10 @@ h2 {
 
 h3 {
     float:left;
-    font-family: 'Geneva';
+    font-family: 'Nunito Sans';
     color: #5c87c0;
-    font-size: 26px;
+    font-size: 2vw;
+    text-align: center;
 }
 
 hr {
@@ -126,8 +127,8 @@ div.desc {
     padding: 5px;
     float: left;
     text-align: left;
-    font-family: 'Geneva';
-    font-size: 18px;
+    font-family: 'Nunito';
+    font-size: 1.75vw;
     color: slategray;
 }
 
@@ -137,7 +138,8 @@ div.desc {
     height: 8%;
     width: 100vw;
     text-align: center;
-    font-size: 10px;
+    font-size: 0.75vw;
+    font-family: 'Nunito Sans';
     color: #ffffff;
     background: #666666; 
     border-top: 8px solid #5c87c0;
