--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,5 +1,5 @@
 * {
-    margin:0;
+    margin: 0;
     padding: 0;
 }
     
@@ -8,43 +8,39 @@ html {
 }
 
 body {
+    min-height: 100%;
     display: grid;
     grid-template-rows: 1fr auto;
 }
 
 div {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
 }
 
 .content {
     display: flex;
     flex-flow: row wrap;
-    height: 100vw;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background: url("../images/hotel-wallpaper.jpg");
     background-position: center;
-    background-repeat: repeat;
 }
 
 #header {
-    position: fixed;
-    display: block;
-    clear: both;
     background: white;
-    height: 8%;
+    height: fit-content;
 }
 
 h1 {
     float:left;
     margin-left: 10%;
-    width: 35%;
+    width: 40%;
     text-align: center;
-    font-size: 3vw;
+    font-size: 3.5vw;
     font-family:'Nunito Sans';
     color: #ffffff;
     background: #5c87c0;
-    height: 100%;
+    height: fit-content;
 }
 
 h2 {
@@ -62,20 +58,14 @@ h2 {
     height: 30%;
 }
 
-#contact {
-    width: 100%;
-    height: 40%;
-    margin-top: 10%;
-}
-
 #box {
     display: flex;
     flex-flow: column wrap;
     border: 2px solid lightgrey;
-    width: 50%;
+    width: 70%;
     height:fit-content;
     margin-right: 10%;
-    margin-left: 23%;
+    margin-left: 15%;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 20px;
@@ -94,6 +84,12 @@ h3 {
 hr {
     width: 99%;
     align-items: center;
+}
+
+.form-group {
+    width: auto;
+    position: center;
+    height: auto;
 }
 
 .footer {
