--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,6 @@
 
 * {
-    margin:0;
+    margin: 0;
     padding: 0;
 }
     
@@ -15,105 +15,79 @@ body {
 }
 
 div {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
 }
 
 .content {
     display: flex;
     flex-flow: row wrap;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background: url("../images/hotel-wallpaper.jpg");
     background-position: center;
 }
 
 #header {
-    position: fixed;
-    display: block;
-    clear: both;
     background: white;
-    height: 8%;
+    height: fit-content;
 }
 
 h1 {
     float:left;
     margin-left: 10%;
-    width: 35%;
+    width: 40%;
     text-align: center;
-    font-size: 3vw;
+    font-size: 3.5vw;
     font-family:'Nunito Sans';
     color: #ffffff;
     background: #5c87c0;
-    height: 100%;
+    height: fit-content;
+}
+
+.container {
+   display: flex;
+   flex-flow: column wrap;
+   border: 2px solid lightgrey;
+   background: #ffffff;
+   padding: 5%;
+   height: fit-content;
+   width: 80%;
+   margin-top: -5%;
+}
+
+.col-2 {
+    height: 40%;
+    position: absolute;
+    float: left;
+    width: 25%;
+}
+
+.col-6 {
+    height: 40%;
+    position: absolute;
 }
 
 h2 {
-    float:right;
-    display: flex;
-    flex-direction: row;
-    width: 10%;
-    justify-content: center;
+    text-align: center;
     margin-top: 5px;
-    color: slategray;
+    color: #5c87c0;
     font-family: 'Nunito';
     font-size: 1.5vw;
-    border-right: 1px solid lightgray;
-    padding: 1%;
-    height: 30%;
-}
-
-#aboutme {
-    width: 100%;
-    height: 100%;
-    margin-top: 10%;
-}
-
-#box {
-    display: flex;
-    flex-flow: column wrap;
-    position: unset;
-    border: 2px solid lightgrey;
-    justify-content: space-around;
-    height: auto;
-    width: 70%;
-    margin-right: 10%;
-    margin-bottom: 10%;
-    margin-left: 13%;
-    margin-top: 10%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-right: 20px;
-    padding-left: 20px;
-    background: white;
-}
-
-h3 {
-    float:left;
-    font-family: 'Nunito Sans';
-    color: #5c87c0;
-    font-size: 2vw;
-    text-align: center;
-}
-
-hr {
-    width: 99%;
-    align-items: center;
-}
-
-img {
-    float:left;
     position: relative;
 }
 
+hr {
+    width: 100%;
+    align-items: center;
+    border: 2px solid grey;
+}
+
 p {
-    float:centre;
-    align-content: normal;
-    text-align: center;
+    position: relative;    
     padding: 10px;
     font-family: 'Nunito';
     color: #777777;
-    font-size: 1.75vw;
+    font-size: 2.3vh;
 }
 
 .footer {
@@ -127,4 +101,5 @@ p {
     color: #ffffff;
     background: #666666; 
     border-top: 8px solid #5c87c0;
+    left: 0px;
 }
