--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,5 +1,5 @@
 * {
-    margin:0;
+    margin: 0;
     padding: 0;
 }
     
@@ -8,43 +8,39 @@ html {
 }
 
 body {
+    min-height: 100%;
     display: grid;
     grid-template-rows: 1fr auto;
 }
 
 div {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
 }
 
 .content {
     display: flex;
     flex-flow: row wrap;
-    height: 100vw;
-    width: 100%;
+    height: 100%;
+    width: 100vw;
     background: url("../images/hotel-wallpaper.jpg");
     background-position: center;
-    background-repeat: repeat;
 }
 
 #header {
-    position: fixed;
-    display: block;
-    clear: both;
     background: white;
-    height: 8%;
+    height: fit-content;
 }
 
 h1 {
     float:left;
     margin-left: 10%;
-    width: 35%;
+    width: 40%;
     text-align: center;
-    font-size: 3vw;
+    font-size: 3.5vw;
     font-family:'Nunito Sans';
     color: #ffffff;
     background: #5c87c0;
-    height: 100%;
+    height: fit-content;
 }
 
 h2 {
@@ -64,7 +60,7 @@ h2 {
 
 #contact {
     width: 100%;
-    height: 1100px;
+    height: 100%;
     margin-top: 10%;
 }
 
@@ -77,17 +73,17 @@ h2 {
     position: unset;
     border: 2px solid lightgrey;
     justify-content: space-around;
-    height: 70%;
+    height: auto;
     width: 70%;
     margin-right: 10%;
     margin-bottom: 10%;
-    margin-left: 12%;
-    margin-top: 10%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-right: 20px;
-    padding-left: 20px;
+    margin-left: 15%;
+    padding: 20px;
     background: white;
+}
+
+.card {
+    border: none;
 }
 
 h3 {
@@ -105,31 +101,19 @@ hr {
 }
 
 img {
-    float: left;
+    float: center;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
-div.gallery {
-    margin: 5px;
-    float: left;
-    width: 180px;
-    height: auto;
+.card-body {
+    text-align: center;
 }
-  
-div.gallery img {
-    width: 170px;
-    height: 170px;
-}
-  
-div.desc {
-    padding: 5px;
-    float: left;
-    text-align: left;
-    font-family: 'Nunito';
-    font-size: 1.75vw;
-    color: slategray;
+
+h4 {
+    color: #777777;
+    font: 1.5vw;
 }
 
 .footer {
