--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,106 +1,397 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-    
-html {
-    height: 100%;
-}
-
 body {
-    min-height: 100%;
-    display: grid;
-    grid-template-rows: 1fr auto;
-}
-
-div {
-    width: 100%;
-}
-
-.content {
-    display: flex;
-    flex-flow: row wrap;
-    height: 100vh;
-    width: 100vw;
-    background: url("../images/hotel-wallpaper.jpg");
-    background-position: center;
-}
-
-#header {
-    background: white;
-    height: fit-content;
-}
-
-h1 {
-    float:left;
-    margin-left: 10%;
-    width: 40%;
-    text-align: center;
-    font-size: 3.5vw;
-    font-family:'Nunito Sans';
-    color: #ffffff;
-    background: #5c87c0;
-    height: fit-content;
+  margin: 2%;
 }
 
 h2 {
-    float:right;
-    display: flex;
-    flex-direction: row;
-    width: 10%;
-    justify-content: center;
-    margin-top: 5px;
-    color: slategray;
-    font-family: 'Nunito';
-    font-size: 1.5vw;
-    border-right: 1px solid lightgray;
-    padding: 1%;
-    height: 30%;
+  padding-left: 3%;
 }
 
-#box {
-    display: flex;
-    flex-flow: column wrap;
-    border: 2px solid lightgrey;
-    width: 70%;
-    height:fit-content;
-    margin-right: 10%;
-    margin-left: 15%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-right: 20px;
-    padding-left: 20px;
-    background: white;
+.menu-hover-lines {
+  text-align: right;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: all 0.35s ease;
+  margin: 2%;
+  justify-content: space-between;
 }
 
-h3 {
-    float:left;
-    font-family: 'Nunito Sans';
-    color: #5c87c0;
-    font-size: 2vw;
-    text-align: center;
+.menu-hover-lines p a {
+  padding: 0.75rem 0;
+  color: rgba(10, 10, 10, 0.5);
+  position: relative;
+  margin-left: 1rem;
+  text-decoration: none;
 }
+
+p {
+  position: relative;
+  display: inline;
+}
+
+.menu-hover-lines p:first-child a {
+  margin-left: 0;
+}
+
+.menu-hover-lines p.active > a {
+  background-color: transparent;
+}
+
+.menu-hover-lines a:before,
+.menu-hover-lines a::after {
+  height: 3px;
+  position: absolute;
+  content: '';
+  transition: all 0.35s ease;
+  background-color: #ffc107b0;
+  width: 0;
+}
+
+.menu-hover-lines a::before {
+  top: 0;
+  left: 0;
+}
+
+.menu-hover-lines a::after {
+  bottom: 0;
+  right: 0;
+}
+
+.menu-hover-lines a:hover,
+.menu-hover-lines p.active > a {
+  color: #0a0a0a;
+  transition: all 0.35s ease;
+}
+
+.menu-hover-lines a:hover::before,
+.menu-hover-lines .active a::before,
+.menu-hover-lines a:hover::after,
+.menu-hover-lines .active a::after {
+  width: 100%;
+}
+
+.contact-us-section {
+  padding: 2rem;
+  background: #fefefe;
+}
+
+.contact-us-section .contact-us-section-left {
+  padding-right: 2rem;
+  border-bottom: 2px solid #e6e6e6;
+  padding-bottom: 2rem;
+  margin-bottom: 2rem;
+  width: 50%;
+  float: left;
+}
+
+@media print, screen and (min-width: 40em) {
+  .contact-us-section .contact-us-section-left {
+    border-right: 1px solid #e6e6e6;
+    border-bottom: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+}
+
+.contact-us-section .contact-us-section-right {
+  padding-left: 2rem;
+  width: 50%;
+  float: right;
+}
+
+@media print, screen and (min-width: 40em) {
+  .contact-us-section .contact-us-section-right {
+    border-left: 1px solid #e6e6e6;
+  }
+}
+
+.contact-us-section .contact-us-header {
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+@media screen and (min-width: 40em) and (max-width: 74.9375em) {
+  .contact-us-section .contact-us-header {
+    font-size: 32px;
+  }
+}
+
+.contact-us-section .responsive-embed {
+  margin-bottom: 0;
+  padding-bottom: 55%;
+}
+
+.contact-us-form input[type=text],
+.contact-us-form input[type=email],
+.contact-us-form textarea {
+  margin-bottom: 1.5rem;
+  border: lightgray solid 1px;
+  border-radius: 10px;
+  padding: 5px;
+  width: 90%;
+  color: rgb(49, 49, 49);
+}
+
+.contact-us-form-actions {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.contact-us-form-actions input[type=submit] {
+  padding-left: 2rem;
+  padding-right: 2rem;
+  border-radius: 10px;
+  padding: 5px;
+  color: white;
+  background-color: #ffc107b0;
+  border: none;
+}
+
+.contact-us-list {
+  list-style-type: none;
+  margin: 0;
+}
+
+.contact-us-list li a {
+  color: #0a0a0a;
+}
+
+.contact-us-list li::before {
+  margin-right: 2rem;
+  font-size: 2rem;
+  vertical-align: middle;
+  color: #ffc107b0;
+  font-family: 'FontAwesome';
+}
+
+.contact-us-list .address::before {
+  content: '\f041';
+  margin-left: 0.4rem;
+  margin-right: 2.3rem;
+}
+
+.contact-us-list .email::before {
+  content: '\f003';
+}
+
+.contact-us-list .phone::before {
+  content: '\f098';
+}
+
+.button-rounded-hover {
+  border: 0;
+  color: #ffc107b0;
+  font-weight: 500;
+  border-radius: 5000px;
+  padding: 1rem 2rem;
+  text-transform: uppercase;
+  position: relative;
+  overflow: hidden;
+  font-size: 1rem;
+  letter-spacing: 2px;
+  transition: all 0.35s ease;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+}
+
+.button-rounded-hover:before {
+  opacity: 0;
+  content: "";
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  border-radius: inherit;
+  background-color: #ffc107b0;
+  color: white;
+  transition: all 0.3s;
+  -webkit-transform: translateX(-100%);
+      -ms-transform: translateX(-100%);
+          transform: translateX(-100%);
+}
+
+.button-rounded-hover:after {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  border: 5px solid #ffc107b0;
+  color: #ffc107b0;
+  content: '';
+  border-radius: inherit;
+}
+
+.button-rounded-hover:hover,
+.button-rounded-hover:focus {
+  background-color: #ffc107b0;
+  color: white;
+}
+
+.button-rounded-hover:hover:before,
+.button-rounded-hover:focus:before {
+  -webkit-transform: translateX(0%);
+      -ms-transform: translateX(0%);
+          transform: translateX(0%);
+  opacity: 0.25;
+}
+
 
 hr {
-    width: 99%;
-    align-items: center;
+  width: 99%;
+  align-items: center;
+} 
+
+.social-footer {
+  padding: 1rem;
+  background: #8a8a8a;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+    -ms-flex-align: center;
+      align-items: center;
+  -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+      justify-content: space-between;
+}
+  
+.social-footer .social-footer-icons li:last-of-type {
+  margin-right: 0;
+}
+  
+.social-footer .social-footer-icons .fa {
+  font-size: 1.3rem;
+  color: #fefefe;
+}
+  
+.social-footer .social-footer-icons .fa:hover {
+  color: #4a4a4a;
+  transition: color 0.3s ease-in;
+}
+  
+@charset "UTF-8";
+.social-footer {
+  padding: 1rem;
+  background: #fffefe;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.form-group {
-    width: auto;
-    position: center;
-    height: auto;
+.social-footer .social-footer-icons li:last-of-type {
+  margin-right: 0;
 }
 
-.footer {
-    position:fixed;
-    bottom: 0px;
-    height: 8%;
-    width: 100vw;
-    text-align: center;
-    font-size: 0.75vw;
-    font-family: 'Nunito Sans';
-    color: #ffffff;
-    background: #666666; 
-    border-top: 8px solid #5c87c0;
+.social-footer .social-footer-icons .fa {
+  font-size: 1.3rem;
+  color: #fffefe;
+}
+
+.social-footer .social-footer-icons .fa:hover {
+  color: #f8f6f6;
+  transition: color 0.3s ease-in;
+}
+
+@charset "UTF-8";
+
+.rounded-social-buttons {
+text-align: center;
+}
+
+.rounded-social-buttons .social-button {
+display: inline-block;
+position: relative;
+cursor: pointer;
+width: 3.125rem;
+height: 3.125rem;
+border: 0.125rem solid transparent;
+padding: 0;
+text-decoration: none;
+text-align: center;
+color: #fefefe;
+font-size: 1.5625rem;
+font-weight: normal;
+line-height: 2em;
+border-radius: 1.6875rem;
+transition: all 0.5s ease;
+margin-right: 0.25rem;
+margin-bottom: 0.25rem;
+}
+
+.rounded-social-buttons .social-button:hover, .rounded-social-buttons .social-button:focus {
+-webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+}
+
+.rounded-social-buttons .social-button.linkedin {
+background: #ffc107b0;
+}
+
+.rounded-social-buttons .social-button.linkedin:before {
+font-family: "FontAwesome";
+content: "";
+}
+
+.rounded-social-buttons .social-button.linkedin:hover, .rounded-social-buttons .social-button.linkedin:focus {
+color: #ffc107b0;
+background: #fefefe;
+border-color: #ffc107b0;
+}
+
+.rounded-social-buttons .social-button.google-plus {
+background: #ffc107b0;
+}
+
+.rounded-social-buttons .social-button.google-plus:before {
+font-family: "FontAwesome";
+content: "";
+}
+
+.rounded-social-buttons .social-button.google-plus:hover, .rounded-social-buttons .social-button.google-plus:focus {
+color: #ffc107b0;
+background: #fefefe;
+border-color: #ffc107b0;
+}
+
+.rounded-social-buttons .social-button.github {
+background: #ffc107b0;
+}
+
+.rounded-social-buttons .social-button.github:before {
+font-family: "FontAwesome";
+content: "";
+}
+
+.rounded-social-buttons .social-button.github:hover, .rounded-social-buttons .social-button.github:focus {
+color: #ffc107b0;
+background: #fefefe;
+border-color: #ffc107b0;
+}
+
+footer {
+  color: #ffc107b0;
+  position:fixed;
+  bottom: 0px;
+  height: 8%;
+  width: 100vw;
+}
+
+.navbar-toggler {
+  border-color: #ffc107b0;
 }
