--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,105 +1,261 @@
-
-* {
-    margin: 0;
-    padding: 0;
-}
-    
-html {
-    height: 100%;
-}
-
 body {
-    min-height: 100%;
-    display: grid;
-    grid-template-rows: 1fr auto;
-}
-
-div {
-    width: 100%;
-}
-
-.content {
-    display: flex;
-    flex-flow: row wrap;
-    height: 100vh;
-    width: 100vw;
-    background: url("../images/hotel-wallpaper.jpg");
-    background-position: center;
-}
-
-#header {
-    background: white;
-    height: fit-content;
-}
-
-h1 {
-    float:left;
-    margin-left: 10%;
-    width: 40%;
-    text-align: center;
-    font-size: 3.5vw;
-    font-family:'Nunito Sans';
-    color: #ffffff;
-    background: #5c87c0;
-    height: fit-content;
-}
-
-.container {
-   display: flex;
-   flex-flow: column wrap;
-   border: 2px solid lightgrey;
-   background: #ffffff;
-   padding: 5%;
-   height: fit-content;
-   width: 80%;
-   margin-top: -5%;
-}
-
-.col-2 {
-    height: 40%;
-    position: absolute;
-    float: left;
-    width: 25%;
-}
-
-.col-6 {
-    height: 40%;
-    position: absolute;
+    margin: 2%;
 }
 
 h2 {
-    text-align: center;
-    margin-top: 5px;
-    color: #5c87c0;
-    font-family: 'Nunito';
-    font-size: 1.5vw;
+    padding-left: 3%;
+}
+
+.menu-hover-lines {
+    text-align: right;
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 1px;
+    transition: all 0.35s ease;
+    margin: 2%;
+    justify-content: space-between;
+}
+  
+.menu-hover-lines p a {
+    padding: 0.75rem 0;
+    color: rgba(10, 10, 10, 0.5);
     position: relative;
+    margin-left: 1rem;
+    text-decoration: none;
 }
-
-hr {
-    width: 100%;
-    align-items: center;
-    border: 2px solid grey;
-}
-
+  
 p {
-    position: relative;    
-    padding: 10px;
-    font-family: 'Nunito';
-    color: #777777;
-    font-size: 2.3vh;
+    position: relative;
+    display: inline;
+}
+  
+.menu-hover-lines p:first-child a {
+    margin-left: 0;
+}
+  
+.menu-hover-lines p.active > a {
+    background-color: transparent;
+}
+  
+.menu-hover-lines a:before,
+.menu-hover-lines a::after {
+    height: 3px;
+    position: absolute;
+    content: '';
+    transition: all 0.35s ease;
+    background-color: #ffc107b0;
+    width: 0;
+}
+  
+.menu-hover-lines a::before {
+    top: 0;
+    left: 0;
+}
+  
+.menu-hover-lines a::after {
+    bottom: 0;
+    right: 0;
+}
+  
+.menu-hover-lines a:hover,
+.menu-hover-lines p.active > a {
+    color: #0a0a0a;
+    transition: all 0.35s ease;
+}
+  
+.menu-hover-lines a:hover::before,
+.menu-hover-lines .active a::before,
+.menu-hover-lines a:hover::after,
+.menu-hover-lines .active a::after {
+    width: 100%;
 }
 
-.footer {
+.about-the-author {
+    background-color: #ffc1074d;
+    padding: 1rem;
+}
+  
+.about-the-author .author-title {
+    text-transform: uppercase;
+}
+  
+.social-footer {
+    padding: 1rem;
+    background: #fffefe;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+}
+  
+.social-footer .social-footer-icons li:last-of-type {
+    margin-right: 0;
+}
+  
+.social-footer .social-footer-icons .fa {
+    font-size: 1.3rem;
+    color: #fffefe;
+}
+  
+.social-footer .social-footer-icons .fa:hover {
+    color: #f8f6f6;
+    transition: color 0.3s ease-in;
+}
+  
+@charset "UTF-8";
+
+.rounded-social-buttons {
+  text-align: center;
+}
+
+.rounded-social-buttons .social-button {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  width: 3.125rem;
+  height: 3.125rem;
+  border: 0.125rem solid transparent;
+  padding: 0;
+  text-decoration: none;
+  text-align: center;
+  color: #fefefe;
+  font-size: 1.5625rem;
+  font-weight: normal;
+  line-height: 2em;
+  border-radius: 1.6875rem;
+  transition: all 0.5s ease;
+  margin-right: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
+.rounded-social-buttons .social-button:hover, .rounded-social-buttons .social-button:focus {
+  -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+          transform: rotate(360deg);
+}
+
+.rounded-social-buttons .social-button.linkedin {
+  background: #ffc107b0;
+}
+
+.rounded-social-buttons .social-button.linkedin:before {
+  font-family: "FontAwesome";
+  content: "";
+}
+
+.rounded-social-buttons .social-button.linkedin:hover, .rounded-social-buttons .social-button.linkedin:focus {
+  color: #ffc107b0;
+  background: #fefefe;
+  border-color: #ffc107b0;
+}
+
+.rounded-social-buttons .social-button.google-plus {
+  background: #ffc107b0;
+}
+
+.rounded-social-buttons .social-button.google-plus:before {
+  font-family: "FontAwesome";
+  content: "";
+}
+
+.rounded-social-buttons .social-button.google-plus:hover, .rounded-social-buttons .social-button.google-plus:focus {
+  color: #ffc107b0;
+  background: #fefefe;
+  border-color: #ffc107b0;
+}
+
+.rounded-social-buttons .social-button.github {
+  background: #ffc107b0;
+}
+
+.rounded-social-buttons .social-button.github:before {
+  font-family: "FontAwesome";
+  content: "";
+}
+
+.rounded-social-buttons .social-button.github:hover, .rounded-social-buttons .social-button.github:focus {
+  color: #ffc107b0;
+  background: #fefefe;
+  border-color: #ffc107b0;
+}
+
+.button-hover-reveal-wrapper {
+    overflow: hidden;
+    margin: 5%;
+    border: 2px solid #ffc107b0;
+    border-radius: 5000px;
+    text-align: center;
+    width: 60%;
+    background: #fefefe;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+}
+  
+.button-hover-reveal-wrapper:hover {
+    border: none;
+    background-color: #ffc107b0;
+    transition: background-color 0.5s ease;
+}
+  
+.button-hover-reveal-wrapper:hover .button-hover-reveal {
+    display: block;
+    font-size: 16px;
+    padding: 22px;
+}
+  
+.button-hover-reveal-wrapper:hover .button-hover-reveal:hover {
+    transition: background-color 0.5s ease;
+}
+  
+.button-hover-reveal-wrapper:hover label {
+    display: none;
+    background-color: #ffc107b0;
+}
+  
+.button-hover-reveal-wrapper .button-hover-reveal {
+    display: none;
+    text-decoration: none;
+    color: #fefefe;
+    z-index: 1;
+}
+  
+.button-hover-reveal-wrapper label {
+    padding: 16px;
+    color: #ffc107b0;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+footer {
+    color: #ffc107b0;
     position:fixed;
     bottom: 0px;
     height: 8%;
     width: 100vw;
-    text-align: center;
-    font-size: 0.75vw;
-    font-family: 'Nunito Sans';
-    color: #ffffff;
-    background: #666666; 
-    border-top: 8px solid #5c87c0;
-    left: 0px;
+}
+
+.navbar-toggler {
+    border-color: #ffc107b0;
+}
+
+img {
+    border-radius: 10px;
+    height: 70vh;
+}
+
+#column-right {
+    padding: 5%;
+}
+
+#column-left {
+    margin-left: 20%;
 }
