--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -59,8 +59,6 @@ p {
     transition: color 0.3s ease-in;
 }
   
-/* @charset "UTF-8"; */
-
 .rounded-social-buttons {
   text-align: center;
 }
@@ -130,10 +128,6 @@ p {
   content: "";
 }
 
-a {
-    color: #f0ce9e;
-}
-
 .rounded-social-buttons .social-button.github:hover, .rounded-social-buttons .social-button.github:focus {
   color: #f0ce9e;
   background: #fefefe;
@@ -193,9 +187,9 @@ a {
 
 .row {
     height: 100vh;
-    width: 100%;
     align-items: center;
     justify-content: space-around;
+    margin: auto;
 }
 
 footer {
@@ -212,5 +206,5 @@ footer {
 
 img {
     border-radius: 10px;
-    height: 60vh;
+    height: 30vh;
 }
